# RustExercises

./: .gitignore  README.md
HelloWorld/: Cargo.toml
HelloWorld/src/: main.rs
MatrixLib/MatrixLib/: Cargo.toml
MatrixLib/MatrixLib/src/: lib.rs
MatrixLib/main/: Cargo.toml
MatrixLib/main/src/: main.rs
MyMatrixLib/: Cargo.toml
MyMatrixLib/lib/: Cargo.toml  Matrix.rs
MyMatrixLib/lib/MatrixLib/: Matrix.rs
MyMatrixLib/lib1/: Cargo.toml
MyMatrixLib/lib1/MatrixLib/: Matrix.rs
MyMatrixLib/lib2/: Cargo.toml
MyMatrixLib/lib2/MathLib/: Math.rs
MyMatrixLib/src/: Cargo.toml  main.rs
MyMatrixLib/tests/: unit_tests.rs
TicTacToe/: Cargo.toml
TicTacToe/src/: main.rs
